# pg-debyte

./: .dockerignore  Cargo.toml  README.md
.github/workflows/: build.yml  docker-base-image.yml  pg-extension-tests.yml  tests.yml
docker/: ci-base.Dockerfile  ci.Dockerfile
examples/readme_by_id/: Cargo.toml
examples/readme_by_id/src/: lib.rs
examples/readme_envelope/: Cargo.toml
examples/readme_envelope/src/: lib.rs
examples/readme_known_schema/: Cargo.toml
examples/readme_known_schema/src/: lib.rs
pg_debyte_core/: Cargo.toml
pg_debyte_core/src/: error.rs
pg_debyte_ext/: Cargo.toml
pg_debyte_macros/: Cargo.toml
pg_debyte_pgrx/: Cargo.toml
pg_debyte_pgrx/src/: lib.rs
pg_debyte_tools/: Cargo.toml
scripts/: dev.sh  docker-ci-build-image.sh  docker-ci-build-workspace.sh  docker-test.sh  host-examples.sh  package-check.sh  publish-crates.sh
